tests/transpiler/x/java/var_assignment.error
exit status 1
Main.java:6: error: bad operand types for binary operator '=='
        System.out.println((x == null ? "nil" : x));
                              ^
  first type:  int
  second type: <null>
1 error
